test/typeerrors/Examples/LeftSection.hs
module LeftSection where

test :: [Bool] -> [Int]
test = map (+ 3)
